@@ -316,11 +316,8 @@ sub deploy {
 
     if ($plan->position == $to_index) {
         # We are up-to-date.
-        hurl {
-            ident   => 'deploy',
-            message => __ 'Nothing to deploy (up-to-date)',
-            exitval => 1,
-        };
+        $sqitch->info( __ 'Nothing to deploy (up-to-date)' );
+        return $self;
 
     } elsif ($plan->position == -1) {
         # Initialize the database, if necessary.
